Display the footer the same way in all pages

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,6 +1,6 @@
 /*
  * CSS Style for Wombat Mail
- * Copyright 2009 Martin Pieuchot
+ * Copyright 2009,2010 Martin Pieuchot
  */
 
 body {
@@ -24,7 +24,7 @@ h1 a:hover, h2 a:hover {color: inherit;}
 #header {padding: .5em 1em; border-bottom: 1px solid #959596;}
 #header form, #header p {margin: 0; padding: 0;}
 #content {padding: 1em 2em;}
-#footer {padding: 1em 0; font-size: 0.9em; text-align: center; clear:both;}
+#footer {padding: 1em 0; font-size: 0.9em; text-align: center;}
 
 /*
  * Login
@@ -67,6 +67,7 @@ input[type=password], input[type=text] {width: 140px;}
 }
 
 .panel .inline {display: inline-block;}
+.clear {clear: both;}
 
 /*
  * Menu
