Puts '| Wombat' _after_ the title

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}Wombat | {% trans 'Free your webmail' %}{% endblock %}
+{% block title %}{% trans 'Free your webmail' %}{% endblock %}
 
 {% block header %}
 <div id="sidebar">
