--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n mail_tags %}
 
-{% block title %}Wombat | {{directory|numberize:"unread" }}{% endblock %}
+{% block title %}{{directory|numberize:"unread" }}{% endblock %}
 
 
 {% block header %}
