Fixed the font-weight for children of a parent w/ unread messages

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -74,6 +74,7 @@ input[type=password], input[type=text] {width: 140px;}
  */
 
 li.unread {font-weight: bold;}
+li.unread ul {font-weight: normal;}
 
 
 /*
