--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
 <div id="sidebar">
   <div class="form" id="login-form">
   <form action="{% url login %}" method="post">
+    {% csrf_token %}
     <p>
       <label for="id_username">{% trans 'Login:' %}</label>
       <input type="text" name="username" id="id_username" />
