--- a/templates/mail.html
+++ b/templates/mail.html
@@ -25,17 +25,23 @@
 {% endblock %}
 
 {% block content %}
+{% if messages %}<div id="messages">{% for message in messages %}
+	<div class="msg {{ message.tags }}">
+		{{ message }}
+	</div>{% endfor %}
+</div>{% endif %}
+
 <div class="panel">
 {% block panel %}
   Select: <a>All, None, Read, Unread, Starred, Unstarred</a>
   {% include "inc/messagecount.html" %}
   <ul id="messages">
-    {% for m in messages %}
+    {% for m in threads %}
     <li{% if not m.read %} class="new"{% endif %}>
       <input type="checkbox" name="m_{{ m.uid }}" />
       <a href="{% url message directory.mailbox.account.slug directory.id m.uid %}">
-          {% if m.from %}<span class="from">{{ m.from.0|default:m.from.1 }}</span>{% endif %}
-        {{ m.subject|default:"No subject" }}
+          {% if m.headers.from %}<span class="from">{{ m.headers.from|from }}</span>{% endif %}
+        {{ m.headers.subject|default:"No subject" }}
         <span class="date">{{ m.date|hour_or_date }}</span>
         {% if m.attachment %}<img class="attachment" src="{{ MEDIA_URL }}img/attach.png" alt="paperclip"/>{% endif %}
       </a>
