Using more appropriate terms and avoiding clashes with native python functions

--- a/wombat/templates/inc/directory.html
+++ b/wombat/templates/inc/directory.html
@@ -5,7 +5,7 @@
   {% if dir.no_select %}
   {{ dir }}
   {% else %}
-  <a href="{% url directory dir.mailbox.account.slug dir.id %}">
+  <a href="{% url directory dir.imap.account.slug dir.id %}">
     {{ dir|numberize:"unread" }}
   </a>
   {% endif %}
