--- a/wombat/templates/inc/message_menu.html
+++ b/wombat/templates/inc/message_menu.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <p class="inline">
-  <a href="{% url directory directory.mailbox.account.slug directory.id %}">back to <b>{{ directory }}</b></a>
+  <a href="{% url directory directory.imap.account.slug directory.id %}">back to <b>{{ directory }}</b></a>
 </p>
 <form method="post" action="." class="inline"> {% csrf_token %}
   {% with move_form as form %}{% include 'inc/inline_form.html' %}{% endwith %}
