--- a/wombat/templates/mail.html
+++ b/wombat/templates/mail.html
@@ -40,8 +40,10 @@
     {% with thread.get_info as m %}
     <li{% if not m.read %} class="new"{% endif %}>
       <input type="checkbox" name="m_{{ m.uid }}" />
-      <a href="{% url message directory.imap.account.slug directory.id m.uid %}">
-          {% if m.senders %}<span class="from">{{ m.senders|from }}</span>{% endif %}
+      <a href="{% url message directory.imap.account.slug directory.id thread.id %}">
+        <span class="from">{{ m.senders|from }}
+          {% if thread.messages_count > 1 %}({{ thread.messages_count }}){% endif %}
+        </span>
         {{ m.subject|default:"No subject" }}
         <span class="date">{{ m.date|hour_or_date }}</span>
         {% if m.attachment %}<img class="attachment" src="{{ MEDIA_URL }}img/attach.png" alt="paperclip"/>{% endif %}
