UI improvements, nicer thread display and message list

--- a/wombat/media/css/style.css
+++ b/wombat/media/css/style.css
@@ -81,13 +81,13 @@ ul.errorlist {
  */
 
 .panel {
+	padding: 5px 0;
   width: 80%;
   float: right;
-  padding: 5px;
-  border-radius: 10px; /* CSS 3 */
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  background-color: #e0ffb7;
+	border: 3px solid #6af;
+  border-radius: 3px; /* CSS 3 */
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
 }
 
 .panel .inline {display: inline-block;}
@@ -111,10 +111,8 @@ ul#messages {
   margin: 5px 0;
   min-height: 200px;
   background: #fff;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
+	border: 1px solid #d1d5d8;
 }
-ul#messages, ul#messages li:last-child {border-bottom: 1px solid #d1d5d8;}
 
 #messages li {
 	background: #f0f0f0;
@@ -126,6 +124,7 @@ ul#messages, ul#messages li:last-child {border-bottom: 1px solid #d1d5d8;}
 }
 #messages li.new {background: #fff;}
 #messages li:hover {background: #ffd;}
+#messages li:first-child {border-top: none;}
 
 #messages li input[type=checkbox] {float: left;}
 #messages li a {
@@ -135,7 +134,13 @@ ul#messages, ul#messages li:last-child {border-bottom: 1px solid #d1d5d8;}
 	position: relative;
 }
 
-.from {color: #666; font-weight: bold; display: inline-block; width: 200px; overflow: hidden; margin: -3px 0;}
+.from {
+	color: #444;
+	display: inline-block;
+	width: 200px;
+	overflow: hidden;
+	margin: -3px 0;
+}
 .new .from {color: #000;}
 .date, .attachment {float: right; padding: 0 2px;}
 .date { position: absolute; right: 2px; bottom: 3px; }
@@ -148,14 +153,66 @@ ul#messages, ul#messages li:last-child {border-bottom: 1px solid #d1d5d8;}
  * Mail display
  */
 
-.message {
-  margin: 0 1em;
-  padding: .5em 1em;
-  background: white;
-  border-radius: 10px; /* CSS 3 */
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
+#thread {border-bottom: 1px solid #ddd; margin-bottom: 5px;}
+#thread h2 {
+	margin: 5px 0 0 0;
+	padding: 5px;
+	border-top: 1px solid #ddd;
 }
+#thread h2 span {
+	font-weight: normal;
+	font-size: 0.5em;
+	margin: 0 3px;
+	padding: 2px 3px;
+	background-color: #6af;
+	color: #fff;
+	text-shadow: -1px -1px 0px #48f;
+	border: 1px solid #eee;
+  border-radius: 3px; /* CSS 3 */
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+#thread ul {
+	margin: 0;
+	padding: 5px;
+	border-bottom: 1px solid #ddd;
+	border-top: 1px solid #ddd;
+}
+#thread li { padding: 3px; }
+
+.actions { margin: 0; padding: 0 5px; }
+.actions p { margin: 0; padding: 0; }
+.actions form p { padding: 0; }
+
+.msg_header {
+	border-top: 1px solid #ddd;
+	padding: 5px;
+	font-weight: bold;
+	color: #777;
+	cursor: pointer;
+}
+
+
+.message { position: relative; }
+.message .msg_header { display: none; }
+.message .body { padding: 5px; }
+.message .body p { margin: 0.5em 0; padding: 0;}
+.message .collapse {
+	cursor: pointer;
+	position: absolute;
+	top: 0;
+	right: 10px;
+	background-color: #555;
+	color: #fff;
+	padding: 5px;
+  border-radius: 3px; /* CSS 3 */
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
+.collapsed .msg_header { display: block; }
+.collapsed .body, .collapsed .headers { display: none; }
+.collapsed .collapse { display: none; }
 
 /*
  * Settings
