--- a/wombat/templates/base.html
+++ b/wombat/templates/base.html
@@ -5,6 +5,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>{% block title %}Index{% endblock %} | Wombat</title>
   <link rel="stylesheet" type="text/css" media="screen" href="{{ MEDIA_URL }}css/style.css" />
+	<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.js"></script>
   {% block extrahead %}{% endblock %}
   {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
 </head>
