--- a/wombat/templates/inc/messagecount.html
+++ b/wombat/templates/inc/messagecount.html
@@ -1,3 +1,3 @@
 <span class="messagecount">
-  <b>1 - {{ messages|length }}</b> of <b>{{ directory.total }}</b>
+  <b>1 - {{ threads|length }}</b> of <b>{{ directory.total }}</b>
 </span>
