--- a/wombat/templates/users/add_account.html
+++ b/wombat/templates/users/add_account.html
@@ -8,13 +8,7 @@
   <form action="{% url add_account %}" method="post">
     {% csrf_token %}
     <h1>Add an account</h1>
-    {% if submitted and success %}
-    <p>{% trans 'Your account has been successfully created' %}</p>
-    {% endif %}
-    {% if submitted and not success %}
-    <p>{% trans 'An error has been encountered while checking your credentials. Please double check and try again' %}</p>
-    {% endif %}
-    {{ acnt.as_p }}
+    {{ account.as_p }}
     <h2>IMAP settings</h2>
     {{ imap.as_p }}
     <h2>SMTP settings</h2>
