--- a/wombat/media/css/style.css
+++ b/wombat/media/css/style.css
@@ -102,7 +102,7 @@ ul.errorlist {
 	padding: 0.4em 0.2em 0.2em 0.2em;
 	margin: 0;
 }
-.panel p { margin: 0; padding: 5px 0; }
+.panel p { margin: 0; padding: 5px; }
 
 /*
  * Menu
