--- a/wombat/media/css/style.css
+++ b/wombat/media/css/style.css
@@ -24,7 +24,11 @@ h1 a:hover, h2 a:hover {color: inherit;}
 h1, h2, h3 {
 	font-weight: normal;
 	font-family: Helvetica, Arial, sans-serif;
+	padding: 0.4em 0.2em 0.2em 0.2em;
+	margin: 0;
 }
+h2 { font-size: 1.5em; }
+h3 { font-size: 1.3em; }
 
 #header {padding: .5em 1em; border-bottom: 1px solid #959596;}
 #header form, #header p {margin: 0; padding: 0;}
@@ -98,10 +102,6 @@ ul.errorlist {
 .panel .inline {display: inline-block;}
 .clear {clear: both;}
 
-.panel h1, .panel h2, .panel h3 {
-	padding: 0.4em 0.2em 0.2em 0.2em;
-	margin: 0;
-}
 .panel p { margin: 0; padding: 5px; }
 
 /*
