--- a/wombat/templates/mail.html
+++ b/wombat/templates/mail.html
@@ -73,21 +73,20 @@
 {% endblock %}
 </div>
 
-{% if err_msg %}
-  <p class="errornote">{{ err_msg }}</p>
-{% endif %}
-
 {% for account in user.get_profile.accounts.all %}
 {% if forloop.first %}
-<a href="{% url compose %}">Compose</a>
+<h2><a href="{% url inbox %}">Mail</a></h2>
+<ul>
+  <li><a href="{% url check_mail %}?from={{ request.get_full_path }}">Check mail</a></li>
+  <li><a href="{% url compose %}">Compose</a></li>
+</ul>
 {% endif %}
 <h2><a href="{% url account_inbox account.slug %}">{{ account.name }}</a></h2>
-<p><a href="{% url check_mail account.slug %}">Check mail</a></p>
 
 {% with account.common_directories as directories %}
 {% include "inc/directory.html" %}
 {% endwith %}
-
+<br />
 {% with account.custom_directories as directories %}
 {% include "inc/directory.html" %}
 {% endwith %}
