Splitting messages if the number is too high - Displaying the number of unread threads instead of unread messages

--- a/wombat/templates/inc/directory.html
+++ b/wombat/templates/inc/directory.html
@@ -6,7 +6,7 @@
   {{ dir }}
   {% else %}
   <a href="{% url directory dir.id %}">
-    {{ dir|numberize:"unread" }}
+    {{ dir|numberize:"unread_threads" }}
   </a>
   {% endif %}
   {% comment %}
